<resources>
    <string name="app_name">Is It Prime</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="press_start">Press Start</string>
    <string name="correct">True</string>
    <string name="incorrect">False</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="title_activity_hint">HintActivity</string>
    <string name="show_hint">Show Hint</string>
    <string name="show_cheat">Show Cheat</string>
    <string name="hint">Hint</string>
    <string name="back">Back</string>
    <string name="cheat">Cheat</string>
    <string name="show_hint_message">Click \'Show Hint\' for hint.</string>
    <string name="show_cheat_message">Click \'Show Cheat\' for answer.</string>
    <string name="title_activity_cheat">CheatActivity</string>

</resources>
